crates/reze_compiler/tests/snapshots/snapshots__hydrate__refs.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "let el; const a = <div ref={el}><b ref={(b) => use(b)} /><i ref={refs[i++]} /><u ref={pick()} /></div>;"
---
import { template as _$template, claim as _$claim, claimChild as _$claimChild, claimSibling as _$claimSibling, use as _$use } from "reze-js";
const _tmpl$ = /*#__PURE__*/ _$template("<div><b></b><i></i><u></u></div>");
let el; const a = (() => {
  var _el$ = _$claim(_tmpl$, "div"),
    _el$2 = _$claimChild(_el$, 0),
    _el$3 = _$claimSibling(_el$2, 1),
    _el$4 = _$claimSibling(_el$3, 1);
  typeof el === "function" ? _$use(el, _el$) : el = _el$;
  _$use((b) => use(b), _el$2);
  var _o$ = refs, _k$ = i++, _r$ = _o$[_k$];
  typeof _r$ === "function" ? _$use(_r$, _el$3) : _o$[_k$] = _el$3;
  var _r$2 = pick();
  typeof _r$2 === "function" && _$use(_r$2, _el$4);
  return _el$;
})();
