crates/reze_compiler/tests/snapshots/snapshots__hydrate__select_and_textarea.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const a = <select value={v()}>{options()}</select>;\nconst b = <textarea value=\"hi\" />;"
---
import { template as _$template, claim as _$claim, claimInsert as _$claimInsert, bind as _$bind } from "reze-js";
const _tmpl$ = /*#__PURE__*/ _$template("<select></select>"),
  _tmpl$2 = /*#__PURE__*/ _$template("<textarea></textarea>");
const a = (() => {
  var _el$ = _$claim(_tmpl$, "select");
  _$claimInsert(_el$, options);
  _$bind(() => _el$.value = v());
  return _el$;
})();
const b = (() => {
  var _el$2 = _$claim(_tmpl$2, "textarea");
  _el$2.value = "hi";
  return _el$2;
})();
