crates/reze_compiler/tests/snapshots/snapshots__hydrate__show_inlined.snap
---
source: crates/reze_compiler/tests/snapshots.rs
assertion_line: 207
expression: "import { Show } from \"reze-js\";\nconst a = <div><Show when={n() >= 10}><p>big</p></Show></div>;\nconst b = <div>x<Show when={user()} fallback={<i>guest</i>}><>{user().name}<b /></></Show>y</div>;\nconst c = <div><Show when={open()} fallback=\"none\">{label()}</Show></div>;\nconst d = <div><Show when={user()}>{(u) => <b>{u().name}</b>}</Show></div>;\nconst e = <div><Show when={a()} keyed><b /></Show></div>;\nconst f = <div><Show when={a()}><b /><i /></Show></div>;\nconst g = <Show when={a()}><b /></Show>;\nconst h = <div><Show when={a()}>{label()}</Show></div>;"
---
import { Show } from "reze-js";
import { template as _$template, claim as _$claim, memo as _$memo, claimInsert as _$claimInsert, claimChild as _$claimChild, createComponent as _$createComponent } from "reze-js";
const _tmpl$ = /*#__PURE__*/ _$template("<div></div>"),
  _tmpl$2 = /*#__PURE__*/ _$template("<p>big</p>"),
  _tmpl$3 = /*#__PURE__*/ _$template("<div>x<!>y</div>"),
  _tmpl$4 = /*#__PURE__*/ _$template("<b></b>"),
  _tmpl$5 = /*#__PURE__*/ _$template("<i>guest</i>"),
  _tmpl$6 = /*#__PURE__*/ _$template("<i></i>");
const a = (() => {
  var _el$ = _$claim(_tmpl$, "div");
  var _c$ = _$memo(() => !!(n() >= 10));
  _$claimInsert(_el$, () => _c$() && _$claim(_tmpl$2, "p"));
  return _el$;
})();
const b = (() => {
  var _el$2 = _$claim(_tmpl$3, "div"),
    _el$3 = _$claimChild(_el$2, 1);
  var _c$2 = _$memo(() => !!(user()));
  _$claimInsert(_el$2, () => _c$2() ? [_$memo(() => user().name), _$claim(_tmpl$4, "b")] : _$claim(_tmpl$5, "i"), _el$3);
  return _el$2;
})();
const c = (() => {
  var _el$4 = _$claim(_tmpl$, "div");
  _$claimInsert(_el$4, _$createComponent(Show, { get when() { return open(); }, fallback: "none", get children() { return label(); } }));
  return _el$4;
})();
const d = (() => {
  var _el$5 = _$claim(_tmpl$, "div");
  _$claimInsert(_el$5, _$createComponent(Show, { get when() { return user(); }, children: (u) => (() => {
  var _el$6 = _$claim(_tmpl$4, "b");
  _$claimInsert(_el$6, () => u().name);
  return _el$6;
})() }));
  return _el$5;
})();
const e = (() => {
  var _el$7 = _$claim(_tmpl$, "div");
  _$claimInsert(_el$7, _$createComponent(Show, { get when() { return a(); }, keyed: true, get children() { return _$claim(_tmpl$4, "b"); } }));
  return _el$7;
})();
const f = (() => {
  var _el$8 = _$claim(_tmpl$, "div");
  _$claimInsert(_el$8, _$createComponent(Show, { get when() { return a(); }, get children() { return [_$claim(_tmpl$4, "b"), _$claim(_tmpl$6, "i")]; } }));
  return _el$8;
})();
const g = _$createComponent(Show, { get when() { return a(); }, get children() { return _$claim(_tmpl$4, "b"); } });
const h = (() => {
  var _el$9 = _$claim(_tmpl$, "div");
  _$claimInsert(_el$9, _$createComponent(Show, { get when() { return a(); }, get children() { return label(); } }));
  return _el$9;
})();
// info
[SHOW_INLINED] This `<Show>` compiled to a conditional: one memo of `when`'s truthiness and an insert, instead of a component with its own computeds.
  in div
  at case.tsx:2:16
  1 | import { Show } from "reze-js";
> 2 | const a = <div><Show when={n() >= 10}><p>big</p></Show></div>;
    |                ^^^^^^^^^^^^^^^^^^^^^^^
  3 | const b = <div>x<Show when={user()} fallback={<i>guest</i>}><>{user().name}<b /></></Show>y</div>;
// info
[SHOW_INLINED] This `<Show>` compiled to a conditional: one memo of `when`'s truthiness and an insert, instead of a component with its own computeds.
  in div
  at case.tsx:3:17
  2 | const a = <div><Show when={n() >= 10}><p>big</p></Show></div>;
> 3 | const b = <div>x<Show when={user()} fallback={<i>guest</i>}><>{user().name}<b /></></Show>y</div>;
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  4 | const c = <div><Show when={open()} fallback="none">{label()}</Show></div>;
