crates/reze_compiler/tests/snapshots/snapshots__hydrate__static_template.snap
---
source: crates/reze_compiler/tests/snapshots.rs
expression: "const a = <div class=\"box\"><p>hi</p><br /></div>;"
---
import { template as _$template, claim as _$claim } from "reze-js";
const _tmpl$ = /*#__PURE__*/ _$template("<div class=\"box\"><p>hi</p><br></div>");
const a = _$claim(_tmpl$, "div");
